feat: change historic impl

--- a/src/app/lista/lista.component.scss
+++ b/src/app/lista/lista.component.scss
@@ -1,8 +1,7 @@
 .actions {
-  display: flex;
-  gap: 8px; /* Ajuste o valor conforme necessário para o espaçamento desejado */
+  display: f
 }
 
 .actions a {
-  margin-right: 8px; /* Ajuste o valor conforme necessário para o espaçamento desejado */
+  margin-right: 8px;
 }
